change format photo

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-md-6 col-lg-6 d-flex">
                     <div class="img-about img d-flex align-items-center">
                         <div class="overlay"></div>
-                        <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(./assets/images/about.jpg);"></div>
+                        <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(./assets/images/about.JPG);"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 pl-md-5 py-5">
