--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
                     <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
                     <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
-                    <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+                    <li class="nav-item"><a href="blog.html" class="nav-link"><span>Blog</span></a></li>
                 </ul>
             </div>
         </div>
@@ -107,27 +107,16 @@
                 <div class="col-md-3">
                     <nav id="navi">
                         <ul>
-                            <li><a href="#page-1">Education & Certifications</a></li>
-                            <li><a href="#page-2">Experience</a></li>
-                            <li><a href="#page-3">Skills</a></li>
+                            <li><a href="#page-1">Education</a></li>
+                            <li><a href="#page-2">Certifications</a></li>
+                            <li><a href="#page-3">Experience</a></li>
+                            <li><a href="#page-4">Skills</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-md-9">
                     <div id="page-1" class="page one">
-                        <h2 class="heading">Education & Certifications</h2>
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-book"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <h2>Course-Net Indonesia</h2>
-                                <span class="position">Certification in Application Development with JavaScript and Node.js</span>
-                                <p><strong>Cred: 2403/PK-00221</strong></p>
-                                <p>Indonesia</p>
-                                <span class="date">2024</span>
-                            </div>
-                        </div>
+                        <h2 class="heading">Education</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="flaticon-graduation-cap"></span>
@@ -138,6 +127,22 @@
                                 <p><strong>Information Technology Engineering</strong></p>
                                 <p>Bangkalan - Indonesia</p>
                                 <span class="date">2017-2023</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="page-2" class="page two">
+                        <h2 class="heading">Certification</h2>
+                        <div class="resume-wrap d-flex ftco-animate">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span class="flaticon-book"></span>
+                            </div>
+                            <div class="text pl-3">
+                                <h2>Course-Net Indonesia</h2>
+                                <span class="position">Certification in Application Development with JavaScript and Node.js</span>
+                                <p><strong>Cred: 2403/PK-00221</strong></p>
+                                <p>Indonesia</p>
+                                <span class="date">2024</span>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -154,7 +159,7 @@
                         </div>
                     </div>
 
-                    <div id="page-2" class="page two">
+                    <div id="page-3" class="page three">
                         <h2 class="heading">Experience</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
@@ -221,7 +226,7 @@
                         </div>
                     </div>
                     
-                    <div id="page-3" class="page three">
+                    <div id="page-4" class="page four">
                         <h2 class="heading">Skills</h2>
                         <!-- Skill Section -->
                         <div class="row mb-4 ftco-animate">
@@ -397,7 +402,7 @@
                             <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
                             <li><a href="#resume-section"><span class="icon-long-arrow-right mr-2"></span>Resume</a></li>
                             <li><a href="#project-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                            <li><a href="#contact-section"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+                            <li><a href="blog.html"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
                         </ul>
                     </div>
                 </div>
