--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Portfolio Site</title>
+    <title>Sans</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -84,16 +84,15 @@
                             <h2 class="mb-4">About Me</h2>
                             <p>Here's a little about me</p>
                             <ul class="about-info mt-4 px-md-0 px-2">
-                                <li class="d-flex"><span>Name :</span><span>Sandi Indika Saputra</span></li>
-                                <li class="d-flex"><span>Email :</span><span>sandidikaputra@gmail.com</span></li>
-                                <li class="d-flex"><span>Telp :</span><span>+62 815 5383 3230</span></li>
-                                <li class="d-flex"><span>From :</span><span>Surabaya, Indonesia</span></li>
+                                <li class="d-flex"><span>Sandi Indika Saputra</span></li>
+                                <li class="d-flex"><span>sandidikaputra@gmail.com</span></li>
+                                <li class="d-flex"><span><i class="icon-map-marker"></i> Surabaya | Indonesia</span></li>
                             </ul>
                         </div>
                     </div>
                     <div class="counter-wrap ftco-animate d-flex mt-md-3">
                         <div class="text">
-                            <p><a id="downloadButton" href="" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                            <p><a id="downloadButton" href="" class="btn btn-primary py-3 px-3">Resume</a></p>
                         </div>
                     </div>
                 </div>
@@ -139,10 +138,8 @@
                             </div>
                             <div class="text pl-3">
                                 <h2>Course-Net Indonesia</h2>
-                                <span class="position">Certification in Application Development with JavaScript and Node.js</span>
-                                <p><strong>Cred: 2403/PK-00221</strong></p>
-                                <p>Indonesia</p>
-                                <span class="date">2024</span>
+                                <span class="position">Complete Application Development with JavaScript and Node.js Course</span>
+                                <p class="date">2024</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -151,10 +148,8 @@
                             </div>
                             <div class="text pl-3">
                                 <h2>Rakamin Academy</h2>
-                                <span class="position">Certification in Data Scientist with Python</span>
-                                <p><strong>Cred: 6341DATA_SCIENCE102021-EG</strong></p>
-                                <p>Indonesia</p>
-                                <span class="date">2021</span>
+                                <span class="position">Data Scientist 101 Mini Bootcamp</span>
+                                <p class="date">2021</p>
                             </div>
                         </div>
                     </div>
@@ -341,40 +336,6 @@
                             <p>Analysis based on time series, with a special focus on hourly energy consumption forecasting.</p>
                         </div>
                     </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
-        <div class="container">
-            <div class="row justify-content-center mb-4 pb-3">
-                <div class="col-md-7 heading-section text-center ftco-animate">
-                    <h2 class="mb-4">Contact Me</h2>
-                </div>
-            </div>
-            <div class="row d-flex justify-content-center contact-info mb-5">
-                <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-                    <div class="align-self-stretch box text-center p-4 shadow">
-                        <div class="icon d-flex align-items-center justify-content-center">
-                            <span class="icon-phone2"></span>
-                        </div>
-                        <div>
-                            <h3 class="mb-4">Contact Number</h3>
-                            <p><a href="https://api.whatsapp.com/send/?phone=6281553833230&text&type=phone_number&app_absent=0" target="_blank">+62 815 5383 3230</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 d-flex ftco-animate">
-                    <div class="align-self-stretch box text-center p-4 shadow">
-                        <div class="icon d-flex align-items-center justify-content-center">
-                            <span class="icon-paper-plane"></span>
-                        </div>
-                        <div>
-                            <h3 class="mb-4">Email Address</h3>
-                            <p><a href="mailto:sandidikaputra@gmail.com">sandidikaputra@gmail.com</a></p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
