--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
                     <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
                     <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link"><span>Blog</span></a></li>
+                    <li class="nav-item"><a href="https://suryaeceran.hashnode.dev/" class="nav-link"><span>Blog</span></a></li>
                 </ul>
             </div>
         </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="counter-wrap ftco-animate d-flex mt-md-3">
                         <div class="text">
-                            <p><a id="downloadButton" href="" class="btn btn-primary py-3 px-3">Resume</a></p>
+                            <p><a id="downloadButton" href="" class="btn btn-primary py-3 px-3"><i class="icon-file-text"></i> Resume</a></p>
                         </div>
                     </div>
                 </div>
@@ -363,7 +363,7 @@
                             <li><a href="#about-section"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
                             <li><a href="#resume-section"><span class="icon-long-arrow-right mr-2"></span>Resume</a></li>
                             <li><a href="#project-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                            <li><a href="blog.html"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
+                            <li><a href="https://suryaeceran.hashnode.dev/"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
                         </ul>
                     </div>
                 </div>
