--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    Made with <i class="icon-heart color-danger" aria-hidden="true"></i>
+                    Made with <i class="icon-heart" aria-hidden="true"></i>
                     <br>
                     <span class="mt-5">Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script>
