update structur assets

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
 
                     <div id="page-2" class="page two">
-                        <h2 class="heading">Certification</h2>
+                        <h2 class="heading">Certifications</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="flaticon-book"></span>
@@ -229,28 +229,28 @@
                         <h2 class="heading">Skills</h2>
                         <!-- Skill Section -->
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/javascript.png" title="JavaScript"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/node.png" title="NodeJS"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/html.png" title="HTML"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/css.png" title="CSS"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/bootstrap.png" title="Bootstrap"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/cplusplus.png" title="C++"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/javascript.png" title="JavaScript"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/node.png" title="NodeJS"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/html.png" title="HTML"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/css.png" title="CSS"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/bootstrap.png" title="Bootstrap"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/cplusplus.png" title="C++"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/photoshop.png" title="Photoshop"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/lightroom.png" title="Lightroom"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/illustrator.png" title="Illustrator"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/wordpress.png" title="WordPress"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/linux.png" title="Linux"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/java.png" title="Java"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/photoshop.png" title="Photoshop"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/lightroom.png" title="Lightroom"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/illustrator.png" title="Illustrator"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/wordpress.png" title="WordPress"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/linux.png" title="Linux"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/java.png" title="Java"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/flutter.png" title="Flutter"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/github.png" title="GitHub"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/gitlab.png" title="GitLab"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/postgresql.png" title="PostgreSQL"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/python.png" title="Python"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/skills/streamlit.png" title="Streamlit"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/flutter.png" title="Flutter"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/github.png" title="GitHub"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/gitlab.png" title="GitLab"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/postgresql.png" title="PostgreSQL"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/python.png" title="Python"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/streamlit.png" title="Streamlit"></div>
                         </div>
                     </div>
                 </div>
