--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <div class="container">
             <div class="row d-flex no-gutters">
                 <div class="col-md-6 col-lg-6 d-flex">
-                    <div class="img-about img d-flex align-items-center">
+                    <div class="img-about img d-flex alignitems-center">
                         <div class="overlay"></div>
-                        <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(./assets/about.JPG);"></div>
+                        <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(./assets/about.webp);"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 pl-md-5 py-5">
@@ -229,28 +229,25 @@
                         <h2 class="heading">Skills</h2>
                         <!-- Skill Section -->
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/javascript.png" title="JavaScript"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/node.png" title="NodeJS"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/html.png" title="HTML"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/css.png" title="CSS"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/bootstrap.png" title="Bootstrap"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/cplusplus.png" title="C++"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/javascript.png" alt="JavaScript" title="JavaScript"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/node.png" alt="NodeJS" title="NodeJS"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/html.png" alt="HTML" title="HTML"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/css.png" alt="CSS" title="CSS"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/bootstrap.png" alt="Bootstrap" title="Bootstrap"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/photoshop.png" title="Photoshop"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/lightroom.png" title="Lightroom"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/illustrator.png" title="Illustrator"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/wordpress.png" title="WordPress"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/linux.png" title="Linux"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/java.png" title="Java"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/photoshop.png" alt="Photoshop" title="Photoshop"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/lightroom.png" alt="Lightroom" title="Lightroom"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/wordpress.png" alt="WordPress" title="WordPress"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/linux.png" alt="Linux" title="Linux"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/java.png" alt="Java" title="Java"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/flutter.png" title="Flutter"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/github.png" title="GitHub"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/gitlab.png" title="GitLab"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/postgresql.png" title="PostgreSQL"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/python.png" title="Python"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/streamlit.png" title="Streamlit"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/github.png" alt="GitHub" title="GitHub"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/mongo.png" alt="MongoDB" title="MongoDB"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/postgresql.png" alt="PostgreSQL" title="PostgreSQL"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/python.png" alt="Python" title="Python"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/streamlit.png" alt="Streamlit" title="Streamlit"></div>
                         </div>
                     </div>
                 </div>
@@ -344,7 +341,7 @@
             </div>
         </div>
     </section>
-
+    
     <footer class="ftco-footer ftco-section">
         <div class="container">
             <div class="row mb-5">
@@ -354,9 +351,10 @@
                         <p>I like working with new tools and technologies.</p>
                         <p class="mt-4"><u>Social Links</u></p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
-                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/ndisan/" target="_blank"><span class="icon-linkedin-square"></span></a></li>
-                            <li class="ftco-animate"><a href="https://www.instagram.com/ndisans__/" target="_blank"><span class="icon-instagram"></span></a></li>
-                            <li class="ftco-animate"><a href="https://suryaeceran.hashnode.dev/" target="_blank"><i class="icon-hashnode"></i></a></li>
+                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/ndisan/" target="_blank"><img src="./assets/logo/linkedin.png" alt="Linkedin" title="Linkedin"></a></li>
+                            <li class="ftco-animate"><a href="https://www.instagram.com/ndisans__/" target="_blank"><img src="./assets/logo/instagram.png" alt="Instagram" title="Instagram"></a></li>
+                            <li class="ftco-animate"><a href="https://github.com/sandiindika/" target="_blank"><img src="./assets/logo/github.png" alt="GitHub" title="GitHub"></a></li>
+                            <li class="ftco-animate"><a href="https://suryaeceran.hashnode.dev/" target="_blank"><img src="./assets/logo/hashnode.png" alt="Hashnode" title="Hashnode"></a></li>
                         </ul>
                     </div>
                 </div>
