add social media

--- a/index.html
+++ b/index.html
@@ -236,18 +236,18 @@
                             <div class="col grow"><img class="img-fluid" src="./assets/logo/bootstrap.png" alt="Bootstrap" title="Bootstrap"></div>
                         </div>
                         <div class="row mb-4 ftco-animate">
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/photoshop.png" alt="Photoshop" title="Photoshop"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/lightroom.png" alt="Lightroom" title="Lightroom"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/wordpress.png" alt="WordPress" title="WordPress"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/linux.png" alt="Linux" title="Linux"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/java.png" alt="Java" title="Java"></div>
-                        </div>
-                        <div class="row mb-4 ftco-animate">
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/python.png" alt="Python" title="Python"></div>
                             <div class="col grow"><img class="img-fluid" src="./assets/logo/github.png" alt="GitHub" title="GitHub"></div>
                             <div class="col grow"><img class="img-fluid" src="./assets/logo/mongo.png" alt="MongoDB" title="MongoDB"></div>
                             <div class="col grow"><img class="img-fluid" src="./assets/logo/postgresql.png" alt="PostgreSQL" title="PostgreSQL"></div>
-                            <div class="col grow"><img class="img-fluid" src="./assets/logo/python.png" alt="Python" title="Python"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/wordpress.png" alt="WordPress" title="WordPress"></div>
+                        </div>
+                        <div class="row mb-4 ftco-animate">
                             <div class="col grow"><img class="img-fluid" src="./assets/logo/streamlit.png" alt="Streamlit" title="Streamlit"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/linux.png" alt="Linux" title="Linux"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/java.png" alt="Java" title="Java"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/lightroom.png" alt="Lightroom" title="Lightroom"></div>
+                            <div class="col grow"><img class="img-fluid" src="./assets/logo/photoshop.png" alt="Photoshop" title="Photoshop"></div>
                         </div>
                     </div>
                 </div>
@@ -276,34 +276,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://forth-engine.github.io/" target="_blank" class="services-1 shadow">
-                        <span class="icon">
-                            <i class="icon-globe"></i>
-                        </span>
-                        <div class="desc">
-                            <h3 class="mb-4">Forth Engine</h3>
-                            <p><strong>C++</strong></p>
-                            <p>Forth Engine is an open-source C++ Engine to render and manipulate
-                                <br>high, four dimensional objects into three dimensional objects that can
-                                <br>be rendered via ordinary graphics renderer, like OpenGL.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://github.com/willnode/Ascii-Painter" target="_blank" class="services-1 shadow">
-                        <span class="icon">
-                            <i class="icon-terminal"></i>
-                        </span>
-                        <div class="desc">
-                            <h3 class="mb-4">ASCII Painter</h3>
-                            <p><strong>C# • .NET</strong></p>
-                            <p>Ascii Painter is .NET based Text Painting tool.
-                                <br>Create art in ASCII and paste it to your code and many places!</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://willnode.github.io/wa-viewer" target="_blank" class="services-1 shadow">
+                    <a href="https://sandiindika.github.io/wa-viewer/" target="_blank" class="services-1 shadow">
                         <span class="icon">
                             <i class="icon-whatsapp"></i>
                         </span>
@@ -355,6 +328,7 @@
                             <li class="ftco-animate"><a href="https://www.instagram.com/ndisans__/" target="_blank"><img src="./assets/logo/instagram.png" alt="Instagram" title="Instagram"></a></li>
                             <li class="ftco-animate"><a href="https://github.com/sandiindika/" target="_blank"><img src="./assets/logo/github.png" alt="GitHub" title="GitHub"></a></li>
                             <li class="ftco-animate"><a href="https://suryaeceran.hashnode.dev/" target="_blank"><img src="./assets/logo/hashnode.png" alt="Hashnode" title="Hashnode"></a></li>
+                            <li class="ftco-animate"><a href="https://www.kaggle.com/ndisan" target="_blank"><img src="./assets/logo/kaggle.png" alt="Kaggle" title="Kaggle"></a></li>
                         </ul>
                     </div>
                 </div>
