--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         </span>
                         <div class="desc">
                             <h3 class="mb-4">Loan Prediction</h3>
-                            <p><strong>Python • Notebook</strong></p>
+                            <p><strong>Python Notebook</strong></p>
                             <p>Data Storytelling about Loan Prediction Based on Customer Behavior</p>
                         </div>
                     </a>
@@ -294,7 +294,7 @@
                         </span>
                         <div class="desc">
                             <h3 class="mb-4">Conversational AI ChatBot</h3>
-                            <p><strong>Python • DialoGPT</strong></p>
+                            <p><strong>Python Notebook • DialoGPT</strong></p>
                             <p>An intelligent ChatBot built with Microsoft's DialoGPT transformer to interact with human users!</p>
                         </div>
                     </a>
@@ -306,7 +306,7 @@
                         </span>
                         <div class="desc">
                             <h3 class="mb-4">Time Series Forecasting PJME_MW</h3>
-                            <p><strong>Python • Notebook</strong></p>
+                            <p><strong>Python Notebook</strong></p>
                             <p>Analysis based on time series, with a special focus on hourly energy consumption forecasting.</p>
                         </div>
                     </a>
