--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <div class="ftco-footer-widget mb-4 ml-md-4">
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
-                            <li><a href="https://suryaeceran.hashnode.dev/"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
+                            <li><a href="https://suryaeceran.hashnode.dev/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
                             <li><a href="#project-section"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
                         </ul>
                     </div>
