--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://sandiindika.github.io/wa-viewer/" target="_blank" class="services-1 shadow">
+                    <a href="https://sandiindika.github.io/project-wa-viewer/" target="_blank" class="services-1 shadow">
                         <span class="icon">
                             <i class="icon-whatsapp"></i>
                         </span>
