--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <div class="desc">
                             <h3 class="mb-4">WhatsApp Viewer</h3>
                             <p><strong>HTML</strong></p>
-                            <p>View beautiful WhatsApp chat exports (using extracted backup in JSON format).</p>
+                            <p>View beautiful WhatsApp chat exports (using extracted backup in JSON format)</p>
                         </div>
                     </a>
                 </div>
