Add speed insights

--- a/index.html
+++ b/index.html
@@ -362,6 +362,11 @@
 	<script src="./js/particles.min.js"></script>
 	<script src="./js/app.js"></script>
 	<script src="./js/main.js"></script>
+
+    <script>
+        window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 
 </html>
