--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                             <li class="ftco-animate"><a href="https://www.linkedin.com/in/ndisan/" target="_blank"><img src="./assets/logo/linkedin.png" alt="Linkedin" title="Linkedin"></a></li>
                             <li class="ftco-animate"><a href="https://www.instagram.com/ndisans__/" target="_blank"><img src="./assets/logo/instagram.png" alt="Instagram" title="Instagram"></a></li>
                             <li class="ftco-animate"><a href="https://github.com/sandiindika/" target="_blank"><img src="./assets/logo/github.png" alt="GitHub" title="GitHub"></a></li>
-                            <li class="ftco-animate"><a href="https://suryaeceran.hashnode.dev/" target="_blank"><img src="./assets/logo/hashnode.png" alt="Hashnode" title="Hashnode"></a></li>
+                            <li class="ftco-animate"><a href="https://hashnode.com/@suryaeceran" target="_blank"><img src="./assets/logo/hashnode.png" alt="Hashnode" title="Hashnode"></a></li>
                             <li class="ftco-animate"><a href="https://www.kaggle.com/ndisan" target="_blank"><img src="./assets/logo/kaggle.png" alt="Kaggle" title="Kaggle"></a></li>
                         </ul>
                     </div>
@@ -325,6 +325,8 @@
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
                             <li><a href="https://suryaeceran.hashnode.dev/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
+                            <li><a href="https://www.kaggle.com/ndisan/datasets" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Datasets</a></li>
+                            <li><a href="https://www.kaggle.com/ndisan/code" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Notebooks</a></li>
                         </ul>
                     </div>
                 </div>
