--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
                                 <span class="flaticon-book"></span>
                             </div>
                             <div class="text pl-3">
+                                <h2>L.A. Academy</h2>
+                                <span class="position">Complete Website Development for Web Developers Course</span>
+                                <p class="date">2024</p>
+                            </div>
+                        </div>
+                        <div class="resume-wrap d-flex ftco-animate">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span class="flaticon-book"></span>
+                            </div>
+                            <div class="text pl-3">
                                 <h2>Course-Net Indonesia</h2>
                                 <span class="position">Complete Application Development with JavaScript and Node.js Course</span>
                                 <p class="date">2024</p>
