--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             </div>
                             <div class="text pl-3">
                                 <h2>L.A. Academy</h2>
-                                <span class="position">Complete Website Development for Web Developers Course</span>
+                                <span class="position">Website Development for Web Developers Course</span>
                                 <p class="date">2024</p>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                             </div>
                             <div class="text pl-3">
                                 <h2>Course-Net Indonesia</h2>
-                                <span class="position">Complete Application Development with JavaScript and Node.js Course</span>
+                                <span class="position">Application Development with JavaScript and Node.js Course</span>
                                 <p class="date">2024</p>
                             </div>
                         </div>
