--- a/index.html
+++ b/index.html
@@ -309,6 +309,18 @@
                         </div>
                     </a>
                 </div>
+                <div class="col-md-4 text-center d-flex ftco-animate">
+                    <a href="https://sandiindika.github.io/project-portfolio-landing/" target="_blank" class="services-1 shadow">
+                        <span class="icon">
+                            <i class="icon-globe"></i>
+                        </span>
+                        <div class="desc">
+                            <h3 class="mb-4">Portfolio Site</h3>
+                            <p><strong>HTML • CSS • JavaScript</strong></p>
+                            <p>Personal static websites built with HTML, CSS and JavaScript.</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
