--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://sansport.vercel.app/" target="_blank" class="services-1 shadow">
+                    <a href="https://sand-portfolio.vercel.app/" target="_blank" class="services-1 shadow">
                         <span class="icon">
                             <i class="icon-globe"></i>
                         </span>
