Edit projects link

--- a/index.html
+++ b/index.html
@@ -286,30 +286,6 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://www.kaggle.com/code/ndisan/ai-chatbot" target="_blank" class="services-1 shadow">
-                        <span class="icon">
-                            <i class="flaticon-bomberman"></i>
-                        </span>
-                        <div class="desc">
-                            <h3 class="mb-4">Conversational AI ChatBot</h3>
-                            <p><strong>Python Notebook • DialoGPT</strong></p>
-                            <p>An intelligent ChatBot built with Microsoft's DialoGPT transformer to interact with human users!</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 text-center d-flex ftco-animate">
-                    <a href="https://www.kaggle.com/code/ndisan/time-series-analysis-comparison" target="_blank" class="services-1 shadow">
-                        <span class="icon">
-                            <i class="flaticon-camp"></i>
-                        </span>
-                        <div class="desc">
-                            <h3 class="mb-4">Time Series Forecasting PJME_MW</h3>
-                            <p><strong>Python Notebook</strong></p>
-                            <p>Analysis based on time series, with a special focus on hourly energy consumption forecasting.</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-md-4 text-center d-flex ftco-animate">
                     <a href="https://sand-portfolio.vercel.app/" target="_blank" class="services-1 shadow">
                         <span class="icon">
                             <i class="icon-globe"></i>
@@ -317,7 +293,19 @@
                         <div class="desc">
                             <h3 class="mb-4">Portfolio Site</h3>
                             <p><strong>HTML • CSS • JavaScript</strong></p>
-                            <p>Personal static websites built with HTML, CSS and JavaScript.</p>
+                            <p>Check out some of my personal projects here.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 text-center d-flex ftco-animate">
+                    <a href="https://sand-dashboard.streamlit.app/" target="_blank" class="services-1 shadow">
+                        <span class="icon">
+                            <i class="flaticon-badge"></i>
+                        </span>
+                        <div class="desc">
+                            <h3 class="mb-4">Streamlit App</h3>
+                            <p><strong>Python</strong></p>
+                            <p>Building out interface using streamlit has been an enriching experience & one must try it especially if you are in the data field.</p>
                         </div>
                     </a>
                 </div>
