--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
                             <li><a href="https://suryaeceran.hashnode.dev/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Blog</a></li>
                             <li><a href="https://www.kaggle.com/ndisan/datasets" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Datasets</a></li>
                             <li><a href="https://www.kaggle.com/ndisan/code" target="_blank"><span class="icon-long-arrow-right mr-2"></span>Notebooks</a></li>
+                            <li><a href="https://sand-portfolio.vercel.app/" target="_blank"><span class="icon-long-arrow-right mr-2"></span>More Projects</a></li>
                         </ul>
                     </div>
                 </div>
